Rename MovieHunter to CinematicBliss in index.html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>MovieHunter</title>
+  <title>CinematicBliss</title>
   <link rel="stylesheet" href="css/style.css" type="text/css" media="all" />
   <script src="https://code.jquery.com/jquery-3.6.0.min.js" defer></script>
   <script src="js/jquery-func.js" defer></script>
@@ -118,3 +118,4 @@
   </div>
 </body>
 </html>
+
