--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
   <div id="shell">
     <header id="header">
-      <h1 id="logo"><a href="#">MovieHunter</a></h1>
+      <h1 id="logo">
+        <a href="#">
+          <img src="css/images/logo-cinematicbliss.jpg" alt="CinematicBliss Logo" style="height: 70px;">
+        </a>
+      </h1>
       <div class="social">
         <span>Follow us on:</span>
         <ul>
@@ -113,10 +117,8 @@
     </main>
 
     <footer id="footer">
-      <p>Copyright ©️ 2025 MovieHunter - All Rights Reserved</p>
+      <p>Copyright ©️ 2025 CinematicBliss - All Rights Reserved</p>
     </footer>
   </div>
 </body>
 </html>
-
-
