--- a/index.html
+++ b/index.html
@@ -11,11 +11,13 @@
 <body>
   <div id="shell">
     <header id="header">
-      <h1 id="logo">
-        <a href="#">
-          <img src="css/images/logo-cinematicbliss.jpg" alt="CinematicBliss Logo" style="height: 70px;">
-        </a>
-      </h1>
+      <h1 id="logo"><a href="#">MovieHunter</a></h1>
+
+      <!-- Banner Ad 1 -->
+      <div class="ad-banner">
+        <!-- Paste your Google AdSense banner ad code here -->
+      </div>
+
       <div class="social">
         <span>Follow us on:</span>
         <ul>
@@ -25,21 +27,39 @@
           <li><a class="rss" href="#">RSS</a></li>
         </ul>
       </div>
+
       <nav id="navigation">
         <ul>
           <li><a class="active" href="#">Home</a></li>
           <li><a href="#">News</a></li>
           <li><a href="#">In Theaters</a></li>
+
+          <!-- Banner Ad 2 inside navigation if desired -->
+          <li>
+            <div class="ad-banner-nav">
+              <!-- Google AdSense banner ad code here -->
+            </div>
+          </li>
+
           <li><a href="#">Coming Soon</a></li>
           <li><a href="#">Contact</a></li>
           <li><a href="#">Advertise</a></li>
         </ul>
       </nav>
+
       <div id="sub-navigation">
         <ul>
           <li><a href="#">Show All</a></li>
           <li><a href="#">Latest Trailers</a></li>
           <li><a href="#">Top Rated</a></li>
+
+          <!-- Banner Ad 3 at sub-navigation -->
+          <li>
+            <div class="ad-banner-subnav">
+              <!-- Google AdSense banner ad code here -->
+            </div>
+          </li>
+
           <li><a href="#">Most Commented</a></li>
         </ul>
         <div id="search">
@@ -54,15 +74,27 @@
 
     <main id="main">
       <section id="content">
+
+        <!-- Banner Ad 4 before Latest Trailers -->
+        <div class="ad-banner">
+          <!-- Google AdSense banner ad code here -->
+        </div>
+
         <div class="box">
           <div class="head">
             <h2>Latest Trailers</h2>
             <p class="text-right"><a href="#">See all</a></p>
           </div>
+
           <div class="movie">
             <div class="movie-image">
-              <span class="play"><span class="name">X-MAN</span></span>
-              <a href="#"><img src="css/images/movie1.jpg" alt="X-Man" /></a>
+
+              <!-- Movie poster wrapped with onclick to show ad -->
+              <a href="#" onclick="showAd(event)">
+                <img src="css/images/movie1.jpg" alt="X-Man" />
+                <span class="play"><span class="name">X-MAN</span></span>
+              </a>
+
             </div>
             <div class="rating">
               <p>Rating</p>
@@ -70,6 +102,13 @@
               <span class="comments">12</span>
             </div>
           </div>
+
+          <!-- Banner Ad 5 between movies -->
+          <div class="ad-banner">
+            <!-- Google AdSense banner ad code here -->
+          </div>
+
+          <!-- Repeat movies and ad banners similarly as needed -->
         </div>
 
         <div class="box">
@@ -77,7 +116,13 @@
             <h2>Top Rated</h2>
             <p class="text-right"><a href="#">See all</a></p>
           </div>
-          <!-- Additional movie blocks -->
+
+          <!-- Banner Ad 6 -->
+          <div class="ad-banner">
+            <!-- Google AdSense banner ad code here -->
+          </div>
+
+          <!-- Add top rated movie blocks here -->
         </div>
 
         <div class="box">
@@ -85,7 +130,13 @@
             <h2>Most Commented</h2>
             <p class="text-right"><a href="#">See all</a></p>
           </div>
-          <!-- Additional movie blocks -->
+
+          <!-- Banner Ad 7 -->
+          <div class="ad-banner">
+            <!-- Google AdSense banner ad code here -->
+          </div>
+
+          <!-- Add most commented movie blocks here -->
         </div>
       </section>
 
@@ -94,6 +145,12 @@
           <h3>News</h3>
           <p class="text-right"><a href="#">See all</a></p>
         </div>
+
+        <!-- Banner Ad 8 -->
+        <div class="ad-banner">
+          <!-- Google AdSense banner ad code here -->
+        </div>
+
         <article class="content">
           <p class="date">12.04.09</p>
           <h4>Disney's A Christmas Carol</h4>
@@ -107,18 +164,41 @@
           <h3>Coming Soon!</h3>
           <p class="text-right"><a href="#">See all</a></p>
         </div>
+
+        <!-- Banner Ad 9 -->
+        <div class="ad-banner">
+          <!-- Google AdSense banner ad code here -->
+        </div>
+
         <div class="content">
           <h4>The Princess and the Frog</h4>
-          <a href="#"><img src="css/images/coming-soon1.jpg" alt="The Princess and the Frog" /></a>
+          <a href="#" onclick="showAd(event)">
+            <img src="css/images/coming-soon1.jpg" alt="The Princess and the Frog" />
+          </a>
           <p>Walt Disney Animation Studios presents the musical The Princess and the Frog, set in New Orleans.</p>
           <a href="#">Read more</a>
         </div>
       </aside>
+
+      <!-- Banner Ad 10 after main content -->
+      <div class="ad-banner">
+        <!-- Google AdSense banner ad code here -->
+      </div>
+
     </main>
 
     <footer id="footer">
-      <p>Copyright ©️ 2025 CinematicBliss - All Rights Reserved</p>
+      <p>Copyright ©️ 2025 MovieHunter - All Rights Reserved</p>
     </footer>
   </div>
+
+  <script>
+    // Function to handle showing ad on movie poster click
+    function showAd(event) {
+      event.preventDefault();
+      // Your Google AdSense ad display logic here or redirect to a page with ads
+      alert('Display Ad here or redirect to ad page');
+    }
+  </script>
 </body>
 </html>
